manifests/gateway/gateway-admin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
  name: gateway-admindev
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    hostname: '*.ktcloud.com'
    name: http-ktcloud-com
    port: 80
    protocol: HTTP
  - allowedRoutes:
      namespaces:
        from: All
    hostname: '*.ktcloud.com'
    name: https-ktcloud-com
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: ktcloud-com-tls
      mode: Terminate
